[package]
name = "election-scraper"
version = "0.1.0"
authors = ["Sean Newman <sxn6296@rit.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_path_to_error = "0.1"
ureq = "1.5"

[profile.release]
opt-level = "s"
lto = true